--- a/styles/layout/_utils.scss
+++ b/styles/layout/_utils.scss
@@ -25,3 +25,28 @@
         top: 100px;
     }
 }
+
+.truncate { 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.overlay {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+}
+
+.flex-center { 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.p-dialog-content {
+    border-top-right-radius: 0px !important;
+    border-top-left-radius: 0px !important;
+}
